--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "13.4.12",
     "postcss": "8.4.27",
     "react": "18.2.0",
+    "react-card-carousel": "^1.1.3",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.2",
